--- a/index.html
+++ b/index.html
@@ -583,16 +583,79 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-group">
+          <strong class="subtitle-social">Подпишитесь на рассылку</strong>
+          <form class="subscribe-form">
+            <label>
+              <input
+                class="subscribe-form-input"
+                type="text"
+                name="subscribe-name"
+                placeholder="E-mail"
+              />
+            </label>
+            <div class="subscribe-form-send">
+              <button class="subscribe-btn btn" type="submit">Подписаться</button>
+              <svg class="subscribe-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg.svg#icon-send"></use>
+              </svg>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- Модальне вікно -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-close-btn" type="button" data-modal-close>
-          <svg width="18" height="18">
+          <svg class="close-btn-icon" width="18" height="18">
             <use href="./images/icons.svg.svg#icon-close"></use>
           </svg>
         </button>
+        <form class="contact-form">
+          <strong class="user-subtitle">Оставьте свои данные, мы вам перезвоним</strong>
+          <label class="contact-form-group">
+            <span class="contact-form-label">Имя</span>
+            <input class="contact-form-input" type="text" name="user-name" />
+            <svg class="contact-form-icon" width="12" height="12">
+              <use href="./images/icons.svg.svg#icon-modal-person"></use>
+            </svg>
+          </label>
+          <label class="contact-form-group">
+            <span class="contact-form-label">Телефон</span>
+            <input class="contact-form-input" type="text" name="user-name" />
+            <svg class="contact-form-icon" width="12" height="12">
+              <use href="./images/icons.svg.svg#icon-modal-phone"></use>
+            </svg>
+          </label>
+          <label class="contact-form-group">
+            <span class="contact-form-label">Почта</span>
+            <input class="contact-form-input" type="text" name="user-name" />
+            <svg class="contact-form-icon" width="12" height="12">
+              <use href="./images/icons.svg.svg#icon-modal-email"></use>
+            </svg>
+          </label>
+          <label class="contact-form-group">
+            <span class="contact-form-label">Комментарий</span>
+            <textarea class="form-feedback" name="feedback" placeholder="Введите текст"></textarea>
+          </label>
+          <label class="form-checkbox">
+            <input
+              class="visually-hidden form-checkbox-input"
+              type="checkbox"
+              name="user-agreement"
+              checked
+            />
+            <span class="form-checkbox-castom">
+              <svg class="form-checkbox-icon" width="11" height="8">
+                <use href="./images/icons.svg.svg#icon-check"></use>
+              </svg>
+            </span>
+            <span class="form-checkbox-agreement">Соглашаюсь с рассылкой и принимаю </span>
+            <a class="link form-checkbox-agreement-on" href=""> Условия договора</a>
+          </label>
+          <button class="btn btn-contact-form" type="submit">Отправить</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
