--- a/index.html
+++ b/index.html
@@ -617,21 +617,21 @@
           <label class="contact-form-group">
             <span class="contact-form-label">Имя</span>
             <input class="contact-form-input" type="text" name="user-name" />
-            <svg class="contact-form-icon" width="12" height="12">
+            <svg class="contact-form-icon" width="18" height="18">
               <use href="./images/icons.svg.svg#icon-modal-person"></use>
             </svg>
           </label>
           <label class="contact-form-group">
             <span class="contact-form-label">Телефон</span>
-            <input class="contact-form-input" type="text" name="user-name" />
-            <svg class="contact-form-icon" width="12" height="12">
+            <input class="contact-form-input" type="text" name="user-phone" />
+            <svg class="contact-form-icon" width="18" height="18">
               <use href="./images/icons.svg.svg#icon-modal-phone"></use>
             </svg>
           </label>
           <label class="contact-form-group">
             <span class="contact-form-label">Почта</span>
-            <input class="contact-form-input" type="text" name="user-name" />
-            <svg class="contact-form-icon" width="12" height="12">
+            <input class="contact-form-input" type="text" name="user-email" />
+            <svg class="contact-form-icon" width="18" height="18">
               <use href="./images/icons.svg.svg#icon-modal-email"></use>
             </svg>
           </label>
